name: haskell-papers
version: 0
build-type: Simple
cabal-version: >= 1.2

executable yaml2json
  main-is: yaml2json.hs
  ghc-options: -O -Wall
  build-depends:
      aeson
    , base
    , bytestring
    , containers
    , mtl
    , text
    , unordered-containers
    , vector
    , vector-algorithms
    , yaml

executable getlinks
  main-is: getlinks.hs
  ghc-options: -O -threaded -Wall -rtsopts "-with-rtsopts=-N4"
  build-depends:
      aeson
    , async
    , base
    , http-client
    , http-client-tls
    , http-types
    , network-uri
    , unordered-containers
    , yaml
