name: haskell-papers
version: 0
build-type: Simple
cabal-version: >= 1.2
license: BSD3
license-file: LICENSE

flag build-getlinks
  default: False

executable yaml2json
  main-is: yaml2json.hs
  ghc-options: -Wall
  build-depends:
      aeson
    , base
    , bytestring
    , containers >= 0.5.11
    , mtl
    , text
    , unordered-containers
    , vector
    , vector-algorithms
    , yaml-combinators

executable getlinks
  if !flag(build-getlinks)
    buildable: False
  main-is: getlinks.hs
  ghc-options: -threaded -Wall -rtsopts "-with-rtsopts=-N4"
  build-depends:
      aeson
    , async
    , base
    , http-client
    , http-client-tls
    , http-types
    , network-uri
    , unordered-containers
    , yaml
